--- a/_include/hu/aix-install-host-utilities.adoc
+++ b/_include/hu/aix-install-host-utilities.adoc
@@ -1,4 +1,4 @@
-== Step 2: Install the Solaris Host Utilities
+== Step 2: Install the AIX Host Utilities
 
 NetApp strongly recommends installing the AIX Host Utilities to support ONTAP LUN management and assist technical support with gathering configuration data. The MPIO package from the Host Utilities provides MPIO support for AIX and VIOS. 
 
