--- a/hu-aix-80.adoc
+++ b/hu-aix-80.adoc
@@ -23,7 +23,7 @@ AIX Host Utilities support the following protocols:
 
 AIX Host Utilities support the following environments:
 
-* AIX Microsoft Multipath I/O (MPIO) (Native OS)
+* AIX Multipath I/O (MPIO) (Native OS)
 * PowerVM 
 +
 For more information about PowerVM, see the IBM PowerVM Live Partition Mobility Red Book.
