--- a/_include/hu/solaris-recommended-settings-mcc-virtualization-snapmirror.adoc
+++ b/_include/hu/solaris-recommended-settings-mcc-virtualization-snapmirror.adoc
@@ -1,4 +1,4 @@
-. Change the default settings for MetroCluster, Oracle Solaris virtualization, or SnapMirror active sync if one or more of these options are included in you storage configuration.
+. Change the default settings for MetroCluster, Oracle Solaris virtualization, or SnapMirror active sync if, these options are included in you storage configuration.
 +
 [role="tabbed-block"]
 =====
