--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -13,7 +13,7 @@ summary: The AIX Host Utilities assists you to manage ONTAP storage attached to 
 :imagesdir: ./media/
 
 [.lead]
-The AIX Host Utilities assists you to manage ONTAP storage attached to an AIX host.
+The AIX Host Utilities help you manage ONTAP storage attached to a Solaris host and assist technical support with gathering configuration data.
 
 AIX Host Utilities support the following protocols:
 
