--- a/hu-solaris-80-cmd.adoc
+++ b/hu-solaris-80-cmd.adoc
@@ -118,7 +118,7 @@ sanlun lun show all
 .Show example
 [%collapsible]
 ====
-[source,curl]
+[source,cli]
 ----
 controller(7mode/E-Series)/                                         device
 vserver(cDOT/FlashRay)       lun-pathname                           filename
