--- a/hu-solaris-80.adoc
+++ b/hu-solaris-80.adoc
@@ -13,7 +13,10 @@ summary: Describes how to use the Solaris Host Utilities 8.0 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Solaris Host Utilities assist you in managing ONTAP storage attached to a Solaris host. The Solaris Host Utilities support several Solaris environments and multiple transport protocols. 
+The Solaris Host Utilities help you manage ONTAP storage attached to a Solaris host and assist technical support with gathering configuration data.
+
+.About this task
+The Solaris Host Utilities support several Solaris environments and multiple transport protocols. 
 
 These are the primary Solaris Host Utilities environments: 
 
@@ -92,7 +95,7 @@ drwxr-xr-x   3 root     sys            4 Mar  7 13:11 ..
 ----
 ====
 
-. Configure the host parameters for your "MPxIO" or "Veritas DMP" environment using the `/opt/NTAP/SANToolkit/bin/host_config` command based on the following multipath stack from the command reference:
+. Configure the host parameters for your "MPxIO" or "Veritas DMP" environment by using the `/opt/NTAP/SANToolkit/bin/host_config` command with the multipath stack from the command reference:
 +
 `/opt/NTAP/SANToolkit/bin/host_config -setup -protocol fcp|iscsi|mixed -multipath mpxio|dmp| non [-noalua] [-mcc 60|90|120]`
 +
