--- a/hu_rhel_75.adoc
+++ b/hu_rhel_75.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_rhel_75.html
 keywords: host utilities, red hat, rhel, linux, 7.5, netapp, ontap
-summary: Describes how to use Red Hat Enterprise Linux 7.5 with ONTAP
+summary: Install the Linux Host Utilities on a RHEL 7.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure RHEL 7.5 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
@@ -20,7 +20,7 @@ include::_include/hu/rhel-configure-kvm-note.adoc[]
 include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities.adoc[]
-
+[[rhel-rhck]]
 == Step 3: Confirm the multipath configuration for your host
 
 You can use multipathing with RHEL 7.5 to manage ONTAP LUNs.
