--- a/hu_rhel_93.adoc
+++ b/hu_rhel_93.adoc
@@ -21,6 +21,7 @@ include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities.adoc[]
 
+[[rhel-rhck]]
 == Step 3: Confirm the multipath configuration for your host
 
 You can use multipathing with RHEL 9.3 to manage ONTAP LUNs.
