--- a/hu_ol_86.adoc
+++ b/hu_ol_86.adoc
@@ -2,135 +2,47 @@
 sidebar: sidebar
 permalink: hu_ol_86.html
 keywords: host utilities, oracle, linux, 8.6, netapp, ontap
-summary: Describes how to use Oracle Linux 8.6 with ONTAP
+summary: Install the Linux Host Utilities on an Oracle Linux 8.6 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-
-= Use Oracle Linux 8.6 with ONTAP
+= Configure Oracle Linux 8.6 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
-:toclevels: 1P
+:toclevels: 1
 :nofooter:
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Oracle Linux 8.6 with ONTAP as the target.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on an Oracle Linux 8.6 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
-== Install the Linux Host Utilities
+include::_include/hu/rhel-configure-kvm-note.adoc[]
 
-include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
+include::_include/hu/linux-enable-san-boot.adoc[]
 
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+include::_include/hu/install-linux-host-utilities.adoc[]
 
-== SAN Toolkit
+== Step 3: Confirm the multipath configuration for your host
 
-include::_include/hu/reuse_hu_san_toolkit.adoc[]
+You can use multipathing with Oracle Linux 8.6 to manage ONTAP LUNs.
 
-== SAN Booting
+NOTE: You can use the link:hu_rhel_86.html#rhel-rhck[recommended settings for Red Hat Enterprise Linux (RHEL) 8.6] to configure Red Hat Compatible Kernel for Oracle Linux 8.6.
 
-.Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+include::_include/hu/linux-ol-multipathing.adoc[]
 
-include::_include/hu/reuse_hu_san_booting_steps.adoc[]
+include::_include/hu/exclude-device.adoc[]
 
-== Multipathing
+include::_include/hu/linux-rhel-customize-parameters.adoc[]
 
-For Oracle Linux (OL) 8.6 the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. OL 8.6 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
+== Step 6: Review the known issues
 
-include::_include/hu/reuse_hu_multipathing_non_asa.adoc[]
-
-The following sections provide sample multipath outputs for a LUN mapped to non-ASA personas.
-
-include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
-
-----
-# multipath -ll
-3600a098038303634722b4d59646c4436 dm-28 NETAPP,LUN C-Mode
-size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=active
-| |- 16:0:6:35 sdwb 69:624 active ready running
-| |- 16:0:5:35 sdun 66:752 active ready running
-|-+- policy='service-time 0' prio=10 status=enabled
-|- 15:0:0:35 sdaj 66:48 active ready running
-|- 15:0:1:35 sdbx 68:176 active ready running
-----
-
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-include::_include/hu/reuse_hu_asa_configuration.adoc[]
-
-----
-# multipath -ll
-3600a098038303634722b4d59646c4436 dm-28 NETAPP,LUN C-Mode
-size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=active
-  |- 11:0:7:6   sdbz 68:208  active ready running
-  |- 11:0:11:6  sddn 71:80   active ready running
-  |- 11:0:15:6  sdfb 129:208 active ready running
-  |- 12:0:1:6   sdgp 132:80  active ready running
-----
-
-NOTE: Do not use an excessive number of paths to a single LUN. No more than 4 paths should be required. More than 8 paths might cause path issues during storage failures.
-
-
-== Recommended Settings
-
-The Oracle Linux 8.6 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
-
-include::_include/hu/reuse_hu_recommended_settings.adoc[]
-
-
-[cols=2*,options="header"]
-|===
-| Parameter
-| Setting
-| detect_prio | yes
-| dev_loss_tmo | infinity
-| failback | immediate
-| fast_io_fail_tmo | 5
-| features | 2 pg_init_retries 50
-| flush_on_last_del | yes
-| hardware_handler | 0
-| no_path_retry | queue
-| path_checker | tur
-| path_grouping_policy | group_by_prio
-| path_selector | service-time 0
-| polling_interval | 5
-| prio | ontap
-| product | LUN.*
-| retain_attached_hw_handler | yes
-| rr_weight | uniform
-| user_friendly_names | no
-| vendor | NETAPP
-|===
-
-.Example
-
-The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because of other SAN arrays still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
-
-----
-defaults {
- path_checker readsector0
- no_path_retry fail
- }
-devices {
- device {
- vendor "NETAPP "
- product "LUN.*"
- no_path_retry queue
- path_checker tur
- }
-}
-----
-
-NOTE: To configure Oracle Linux 8.6 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_86.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.6.
-
-include::_include/hu/reuse_hu_kvm_configuration.adoc[]
-
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
-
-There are no known issues for the Oracle Linux 8.6 with ONTAP release.
+There are no known issues.
 
 NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_86.html#known-problems-and-limitations[known issues] section in the corresponding Red Hat Enterprise Linux release documentation.
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
+
+
